Archive2/0b/d59fe0e6c52094/output
main.cpp:11:29: warning: multi-character character constant [-Wmultichar]
    while (ch = _getch() != 'CR')
                            ^
main.cpp:11:15: warning: using the result of an assignment as a condition without parentheses [-Wparentheses]
    while (ch = _getch() != 'CR')
           ~~~^~~~~~~~~~~~~~~~~~
main.cpp:11:15: note: place parentheses around the assignment to silence this warning
    while (ch = _getch() != 'CR')
              ^
           (                    )
main.cpp:11:15: note: use '==' to turn this assignment into an equality comparison
    while (ch = _getch() != 'CR')
              ^
              ==
main.cpp:11:26: warning: comparison of constant 17234 with expression of type 'char' is always true [-Wtautological-constant-out-of-range-compare]
    while (ch = _getch() != 'CR')
                ~~~~~~~~ ^  ~~~~
main.cpp:13:19: warning: multi-character character constant [-Wmultichar]
        if (ch == 'ESC')
                  ^
main.cpp:13:16: warning: comparison of constant 4543299 with expression of type 'char' is always false [-Wtautological-constant-out-of-range-compare]
        if (ch == 'ESC')
            ~~ ^  ~~~~~
main.cpp:14:19: error: use of undeclared identifier 'RESTART'
            throw RESTART;
                  ^
main.cpp:15:19: warning: multi-character character constant [-Wmultichar]
        if (ch == 'BS')
                  ^
main.cpp:15:16: warning: comparison of constant 16979 with expression of type 'char' is always false [-Wtautological-constant-out-of-range-compare]
        if (ch == 'BS')
            ~~ ^  ~~~~
main.cpp:18:13: error: use of undeclared identifier 'cout'; did you mean 'count'?
            cout << 'BS';   // Also, will this correctly delete or will I need to
            ^~~~
            count
/usr/include/c++/v1/algorithm:1076:1: note: 'count' declared here
count(_InputIterator __first, _InputIterator __last, const _Tp& __value_)
^
main.cpp:18:21: warning: multi-character character constant [-Wmultichar]
            cout << 'BS';   // Also, will this correctly delete or will I need to
                    ^
main.cpp:18:13: error: reference to overloaded function could not be resolved; did you mean to call it?
            cout << 'BS';   // Also, will this correctly delete or will I need to
            ^~~~
/usr/include/c++/v1/algorithm:1076:1: note: possible target for call
count(_InputIterator __first, _InputIterator __last, const _Tp& __value_)
^
main.cpp:23:13: error: use of undeclared identifier 'cout'; did you mean 'count'?
            cout << ch;
            ^~~~
            count
/usr/include/c++/v1/algorithm:1076:1: note: 'count' declared here
count(_InputIterator __first, _InputIterator __last, const _Tp& __value_)
^
main.cpp:23:13: error: reference to overloaded function could not be resolved; did you mean to call it?
            cout << ch;
            ^~~~
/usr/include/c++/v1/algorithm:1076:1: note: possible target for call
count(_InputIterator __first, _InputIterator __last, const _Tp& __value_)
^
main.cpp:26:12: warning: reference to stack memory associated with local variable 'name' returned [-Wreturn-stack-address]
    return name;
           ^~~~
9 warnings and 5 errors generated.
cat: out.txt: No such file or directory
